--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="00000\00001\Solution.cs" />
     <Compile Include="00000\00015\Solution.cs" />
     <Compile Include="00000\00049\Solution.cs" />
+    <Compile Include="00000\00064\Solution.cs" />
     <Compile Include="00000\00065\Solution.cs" />
     <Compile Include="00000\00074\Solution.cs" />
     <Compile Include="00000\00098\Solution.cs" />
