--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -123,6 +123,7 @@
     <Compile Include="01400\01422\Solution.cs" />
     <Compile Include="01400\01423\Solution.cs" />
     <Compile Include="01400\01424\Solution.cs" />
+    <Compile Include="01400\01441\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
