1442. Count Triplets That Can Form Two Arrays of Equal XOR

--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -124,6 +124,7 @@
     <Compile Include="01400\01423\Solution.cs" />
     <Compile Include="01400\01424\Solution.cs" />
     <Compile Include="01400\01441\Solution.cs" />
+    <Compile Include="01400\1442\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
