1455. Check If a Word Occurs As a Prefix of Any Word in a Sentence

--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -133,6 +133,7 @@
     <Compile Include="01400\01450\Solution.cs" />
     <Compile Include="01400\01451\Solution.cs" />
     <Compile Include="01400\01452\Solution.cs" />
+    <Compile Include="01400\01455\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
