--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -135,6 +135,7 @@
     <Compile Include="01400\01452\Solution.cs" />
     <Compile Include="01400\01455\Solution.cs" />
     <Compile Include="01400\01456\Solution.cs" />
+    <Compile Include="01400\01457\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
