--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -51,6 +51,7 @@
     <Compile Include="00000\00065\Solution.cs" />
     <Compile Include="00000\00070\Solution.cs" />
     <Compile Include="00000\00074\Solution.cs" />
+    <Compile Include="00000\00096\Solution.cs" />
     <Compile Include="00000\00098\Solution.cs" />
     <Compile Include="00100\00104\Solution.cs" />
     <Compile Include="00100\00122\Solution.cs" />
