--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -58,6 +58,7 @@
     <Compile Include="00100\00122\Solution.cs" />
     <Compile Include="00100\00136\Solution.cs" />
     <Compile Include="00100\00151\Solution.cs" />
+    <Compile Include="00100\00174\Solution.cs" />
     <Compile Include="00100\00198\Solution.cs" />
     <Compile Include="00200\00202\Solution.cs" />
     <Compile Include="00200\00219\Solution.cs" />
