--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -144,6 +144,7 @@
     <Compile Include="01400\01458\Solution.cs" />
     <Compile Include="01400\01464\Solution.cs" />
     <Compile Include="01400\01465\Solution.cs" />
+    <Compile Include="01400\01466\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
