--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -142,6 +142,7 @@
     <Compile Include="01400\01456\Solution.cs" />
     <Compile Include="01400\01457\Solution.cs" />
     <Compile Include="01400\01458\Solution.cs" />
+    <Compile Include="01400\01460\Solution.cs" />
     <Compile Include="01400\01464\Solution.cs" />
     <Compile Include="01400\01465\Solution.cs" />
     <Compile Include="01400\01466\Solution.cs" />
