--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -150,6 +150,7 @@
     <Compile Include="01400\01471\Solution.cs" />
     <Compile Include="01400\01472\Solution.cs" />
     <Compile Include="01400\01475\Solution.cs" />
+    <Compile Include="01400\01476\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
