--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -63,6 +63,7 @@
     <Compile Include="00200\00202\Solution.cs" />
     <Compile Include="00200\00219\Solution.cs" />
     <Compile Include="00200\00226\Solution.cs" />
+    <Compile Include="00200\00264\Solution.cs" />
     <Compile Include="00200\00283\Solution.cs" />
     <Compile Include="00400\00432\Solution.cs" />
     <Compile Include="00500\00560\Solution.cs" />
