--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -155,6 +155,7 @@
     <Compile Include="01400\01476\Solution.cs" />
     <Compile Include="01400\01477\Solution.cs" />
     <Compile Include="01400\01480\Solution.cs" />
+    <Compile Include="01400\01481\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
