--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -157,6 +157,7 @@
     <Compile Include="01400\01480\Solution.cs" />
     <Compile Include="01400\01481\Solution.cs" />
     <Compile Include="01400\01486\Solution.cs" />
+    <Compile Include="01400\01491\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
