1493. Longest Subarray of 1's After Deleting One Element

--- a/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
+++ b/CSharpSolutions/CSharpSolutions/CSharpSolutions.csproj
@@ -159,6 +159,7 @@
     <Compile Include="01400\01486\Solution.cs" />
     <Compile Include="01400\01491\Solution.cs" />
     <Compile Include="01400\01492\Solution.cs" />
+    <Compile Include="01400\01493\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day08\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day09\Solution.cs" />
     <Compile Include="30.Day.Challenge\Day10\Solution.cs" />
